<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ValleTPV</string>
    <string name="title_activity_preferencias_tpv">Preferencias TPV</string>
    <string name="title_activity_mesas">Mesas</string>
    <string name="title_activity_cuenta">Cuenta</string>
    <string name="title_activity_op_mesas">Operaciones con mesas</string>
    <string name="title_activity_arqueo">Arqueo de caja</string>
    <string name="crear">Crear</string>
    <string name="entrar">Entrar</string>
    <string name="title_activity_camareros">Camareros</string>
    <string name="simpa">Simpa</string>
    <string name="error_pedido">Error\npedido</string>
    <string name="borrar_editar">Editar modo</string>
    <string name="borrar_salir">Salir de modo borrar</string>
    <string name="editar_motivo">Editar motivo</string>
    <string name="borrar_invitacion">Invitacion</string>
    <string name="op_mesas_camarero">Camarero</string>
    <string name="cuenta_reposo">0.00 €</string>
    <string name="cuenta_label_total">Total:</string>
    <string name="camareros_libre">Camareros libre</string>
    <string name="carmareros_pase">Carmareros pase</string>
    <string name="salir">salir</string>
    <string name="ok">OK</string>
    <string name="add_camareros">add cammareros</string>
    <string name="teclado_mesas">teclado mesas</string>
    <string name="boton_mensajes">boton mensajes</string>
    <string name="boton_abrir_caja">boton abrir caja</string>
    <string name="boton_listado_ticket">boton listado ticket</string>
    <string name="camarero">Camarero</string>
    <string name="settings">settings</string>
    <string name="abrir_ncajon">Abrir\nCajon</string>
    <string name="lista_nticket">Lista\nTicket</string>
    <string name="mensaje">Mensaje</string>
    <string name="texto_prueba">Cocacola</string>
    <string name="precio">Precio</string>
    <string name="texto_prueba_can">1</string>
    <string name="varios">Varios</string>
    <string name="texto_prueba_euros">2,00€</string>
    <string name="entrega">Entrega:</string>
    <string name="cantida_a_cobrar">Cantida a cobrar</string>
    <string name="articulos_separados">Articulos separados</string>
    <string name="articulos_pendientes">Articulos pendientes</string>
    <string name="mostrar_tickets">tickets</string>
    <string name="imprimir">imprimir</string>
    <string name="imprimir_factura">imprimir_factura</string>
    <string name="agregar_camarero">agregar camarero</string>
    <string name="total">Total:</string>
    <string name="borrar">borrar</string>
    <string name="descripcion">Descripcion</string>
    <string name="x">X</string>
    <string name="send_mensaje">send mensaje</string>
    <string name="ver">ver</string>
    <string name="fecha_hora">12/12/12 – 00:22</string>
    <string name="texto_prueba_mesa">Mesa 1</string>
    <string name="cambio">Cambio:</string>
    <string name="guardar">Guardar</string>
    <string name="nombre">Nombre</string>
    <string name="primer_apellido">1º Apellido</string>
    <string name="importe">Importe</string>
    <string name="descripci_n">Descripción</string>
    <string name="cantidad_de_monedas">Cantidad de monedas</string>
    <string name="moneda">Moneda</string>
    <string name="url_servidor">Url servidor</string>
    <string name="lista_zonas">Lista de donas</string>
    <string name="Lista_mesas">Lista de mesas</string>
    <string name="separar_cuenta">separar cuenta</string>
    <string name="buscar_articulos">Buscar articulos</string>
    <string name="cantidad_1">Cantidad 1</string>
    <string name="lista_camareros" />
    <string name="cobrar">cobrar</string>
    <string name="numero_1">1</string>
    <string name="numero_2">2</string>
    <string name="nuemro_3">3</string>
    <string name="numero_4">4</string>
    <string name="numero_5">5</string>
    <string name="numero_7">7</string>
    <string name="numero_6">6</string>
    <string name="numero_8">8</string>
    <string name="numero_9">9</string>
    <string name="lista_efectivo">Lista de efectivo</string>
    <string name="agregar_efectivo">Agregar efectivo</string>
    <string name="agregar_gastos">Agregar gastos</string>
    <string name="modificar_cambio">Modificar cambio</string>
    <string name="arqueo_de_caja">Arqueo de caja</string>
    <string name="efectivo">Efectivo</string>
    <string name="texto_euros_cero">0.00€</string>
    <string name="texto_cambio">Cambio:</string>
    <string name="gastos_arqueo">Gastos:</string>
    <string name="codigo" />
    <string name="validar_codgio">Validar Código</string>

</resources>
