<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="560sp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnInv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/fondo_btn_xml"
            android:text="@string/borrar_invitacion" />

        <Button
            android:id="@+id/btnSimpa"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/fondo_btn_xml"
            android:text="@string/simpa" />

        <Button
            android:id="@+id/btnError"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/fondo_btn_xml"
            android:singleLine="false"
            android:text="@string/error_pedido" />

        <ImageButton
            android:id="@+id/btnEdit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/editarxml"
            android:contentDescription="@string/borrar_editar" />

        <ImageButton
            android:id="@+id/btnSalir"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/salirxml"
            android:contentDescription="@string/borrar_salir" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/pneEditarMotivo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/txtMotivo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:autofillHints="Motivo"
            android:hint="@string/editar_motivo"
            android:inputType="text"
            android:textSize="35sp" />

        <Button
            android:id="@+id/btnOk"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:layout_margin="5dp"
            android:layout_weight="4"
            android:background="@drawable/fondo_btn_xml"
            android:text="@string/borrar_ok" />

    </LinearLayout>

</LinearLayout>