<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentStart="true"
    android:layout_alignParentTop="true"
    android:baselineAligned="false"
    android:orientation="horizontal"
    android:padding="10dp">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:layout_margin="20dp"
        android:layout_weight="0.35"
        android:contentDescription="@string/lista_efectivo">

        <LinearLayout
            android:id="@+id/pneEfectivo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        </LinearLayout>
    </ScrollView>

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_weight="0.35">

        <LinearLayout
            android:id="@+id/pneGastos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:orientation="vertical"></LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.25"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="80dp">

            <ImageButton
                android:id="@+id/btnOpenCaja"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/abrir_ncajon"
                android:onClick="clickAbrirCaja"
                android:src="@drawable/abrircajon"
                android:background="@drawable/fondo_btn_xml"
                android:scaleType="fitCenter"
                android:padding="10dp"
                android:text="@string/abrir_ncajon" />

        </RelativeLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_margin="5dp"
            android:background="@drawable/fondo_btn_xml"
            android:onClick="addEfectivo"
            android:text="@string/agregar_efectivo"
            android:textColor="#000000" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_margin="5dp"
            android:background="@drawable/fondo_btn_xml"
            android:onClick="addGastos"
            android:text="@string/agregar_gastos"
            android:textColor="#000000" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_margin="5dp"
            android:background="@drawable/fondo_btn_xml"
            android:onClick="EditCambio"
            android:text="@string/modificar_cambio"
            android:textColor="#000000" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_margin="5dp"
            android:background="@drawable/fondo_btn_xml"
            android:onClick="arquearCaja"
            android:text="@string/arqueo_de_caja"
            android:textColor="#000000" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:background="#ff4cff0e"
            android:orientation="horizontal"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"
            android:paddingRight="5dp"
            android:paddingBottom="5dp">

            <TextView
                android:id="@+id/lblTarifa"
                android:layout_width="99dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:text="@string/efectivo"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/lblEfectivo"
                android:layout_width="168dp"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/lblTarifa"
                android:layout_alignParentEnd="true"
                android:gravity="end"
                android:text="@string/texto_euros_cero"
                android:textAppearance="?android:attr/textAppearanceLarge" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:background="#ffff180e"
            android:orientation="horizontal"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"
            android:paddingRight="5dp"
            android:paddingBottom="5dp">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="107dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:text="@string/gastos_arqueo"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/lblGastos"
                android:layout_width="165dp"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/textView3"
                android:layout_alignParentEnd="true"
                android:gravity="end"
                android:text="@string/texto_euros_cero"
                android:textAppearance="?android:attr/textAppearanceLarge" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:background="#ffc7ca87"
            android:orientation="horizontal"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"
            android:paddingRight="5dp"
            android:paddingBottom="5dp">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="108dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:text="@string/texto_cambio"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/lblCambio"
                android:layout_width="165dp"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/textView1"
                android:layout_alignParentEnd="true"

                android:gravity="end"
                android:text="@string/texto_euros_cero"
                android:textAppearance="?android:attr/textAppearanceLarge" />

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>
