<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    >

    <TextView
        android:id="@+id/txt_cantidad"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.2"
        android:gravity="center_vertical|end"
        android:text="@string/texto_prueba_can"
        android:textAlignment="textEnd"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/lblpor"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.1"
        android:gravity="center_vertical|end"
        android:text="@string/x"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="20sp" />


    <TextView
        android:id="@+id/txt_moneda"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.25"
        android:gravity="center_vertical|end"
        android:text="@string/texto_prueba_euros"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="20sp" />


    <TextView
        android:id="@+id/Total"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.25"
        android:gravity="center_vertical|end"
        android:text="@string/texto_prueba_euros"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="20sp" />

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.15">

        <ImageButton
            android:id="@+id/btn_borrar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:background="@drawable/fondo_btn_xml"
            android:contentDescription="@string/borrar"
            android:onClick="clickBorrarEfc"
            android:padding="10dp"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/papelera"
            android:textSize="20sp" />
    </FrameLayout>


</LinearLayout>