<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <EditText
        android:id="@+id/txt_mensaje"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_weight="0.15"
        android:autofillHints=""
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/mensaje"
        android:inputType="textMultiLine"
        android:padding="10dp"
        android:textColorHint="#0C0C0C"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/lista_camareros_notificables"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7">

    </ListView>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="92dp">

        <ImageButton
            android:id="@+id/btn_salir_mensajes"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center_vertical|end"
            android:background="@drawable/fondo_btn_xml"
            android:contentDescription="@string/borrar_salir"
            android:padding="10dp"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/salir"
            android:text="@string/salir"
            android:textSize="32sp" />
    </FrameLayout>

</LinearLayout>