<?xml version="1.0" encoding="utf-8"?>


    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp">

    <TextView
        android:id="@+id/Descripcion"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.8"
        android:gravity="center_vertical"
        android:text="@string/descripcion"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/cantidad"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.1"
        android:gravity="center_vertical|end"
        android:text="@string/texto_prueba_euros"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="20sp" />

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.1">

        <ImageButton
            android:id="@+id/btn_borrar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/fondo_btn_xml"
            android:contentDescription="@string/borrar"
            android:onClick="clickBorrarGasto"
            android:padding="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/papelera"
            android:textSize="20sp" />
    </FrameLayout>

</LinearLayout>
